k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-backend
  namespace: default
  labels:
    app: insurance-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-backend
  template:
    metadata:
      labels:
        app: insurance-backend
    spec:
      containers:
        - name: backend
          # Replace galeyro with your real GitHub username in lowercase
          image: ghcr.io/galeyro/insurance-backend:v1.0.10 # {"$imagepolicy": "flux-system:insurance-backend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-frontend
  namespace: default
  labels:
    app: insurance-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-frontend
  template:
    metadata:
      labels:
        app: insurance-frontend
    spec:
      containers:
        - name: frontend
          # Replace galeyro with your real GitHub username in lowercase
          image: ghcr.io/galeyro/insurance-frontend:v1.0.5 # {"$imagepolicy": "flux-system:insurance-frontend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: default
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: ghcr.io/kafbat/kafka-ui:latest
          ports:
            - containerPort: 8080
