k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-backend-svc
  namespace: default
  labels:
    app: insurance-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: insurance-backend
---
apiVersion: v1
kind: Service
metadata:
  name: insurance-frontend-svc
  namespace: default
  labels:
    app: insurance-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: insurance-frontend
